--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -133,6 +133,7 @@ px4_add_romfs_files(
 	13012_convergence
 	13013_deltaquad
 	13200_generic_vtol_tailsitter
+	99999_vtol_clevercopter
 
 	# [14000, 14999] Tri Y
 	14001_tri_y_yaw+
